--- a/大三上/计算机网络/第三章-运输层.md
+++ b/大三上/计算机网络/第三章-运输层.md
@@ -43,3 +43,23 @@
 	+ 如果当前分组的序号是1，那么就应该接收到的ACK的值是1，如果接收到的ACK的值是0，说明出错了
 	+ 通过上述两步，实现了无NAK的可靠数据传输协议
 - 具有差错比特的丢包信道上的可靠数据传输：rdt3.0
+
+#### 流水线可靠数据传输协议
+- rdt可靠数据传输协议本身并无错，但因为他是停等协议，所以带宽利用率很低，为了解决这个问题，简单的方法是不采用停等协议。也就是允许发送方发送多个分组而无需等待确认。这种技术被称为流水线技术。
+- 流水线技术对可靠数据传输协议带来下面的影响
+	+ 必须增加序号范围，因为每个传输的分组(不包括重传的)必须有一个唯一的序号，而且也有多个在传输中的未确认分组。
+	+ 协议的发送发和接收方也必须缓存多个分组。发送发最低限度应该能够缓冲那些已经发送但是没有确认的分组，接收方或许也需要缓存那些已经接受的分组。
+	+ 所需序号范围和对缓冲的要求取决于数据传输协议处理丢失、损坏以及过度延时分组的方式。解决流水线的差错恢复有两种基本的方法：回退N步和选择重传。
+		* 回退N步GBN-滑动窗口协议
+			- 允许发送发发送多个分组而不需等待确认，但是也受限于在流水线中未确认的分组数不能超过最大允许数N
+			- 基序号：最早的未确认的分组号
+			- 下一个序号：最小的未使用的序号，也就是下一个待发送的分组
+			- 发送发需要响应下面三种事件：上层的调用：先检测窗口是不是满了，如果满了，将数据返回给上册，隐式标明窗口已满，如果未满，打包发送数据；收到ACK；超时事件：定时器用于恢复丢失的数据和分组。如果出现超时，发送方将重传所有已发送但是还未确认的分组。
+			- 接收方需要响应的事件很简单：如果一个序号为n的分组被正确接收到，则为分组n发送ACK，在其他所有情况下，接收方都将丢弃该分组，并且为最近按序接收的分组发送ACK
+		* 选择重传SR
+			- 选择重传协议通过让发送方仅重传那些它怀疑在接收方出错的分组而避免了不必要的重传。
+			- SR接收方将确认一个正确接收的分组而不管其是否按序。失序的分组将被缓存直到所有的丢失分组都被收到。
+
+#### TCP流控制（TCP flow control）
+- TCP 为应用程序提供了流量控制服务，以消除发送方使接收方缓存溢出的可能性，即发送方的发送速率与接收方应用程序的读速率相匹配。
+- 维护一个接收窗口的变量来提供流量控制。
