--- a/大三上/计算机网络/第二章-应用层.md
+++ b/大三上/计算机网络/第二章-应用层.md
@@ -1,5 +1,5 @@
 #### SMTP 简单的邮件传输协议
-- SMTP一般不使用中间邮件服务器发送邮件，及时这两个邮件服务器位于地球的两端也是一样。
+- SMTP一般不使用中间邮件服务器发送邮件，即使这两个邮件服务器位于地球的两端也是一样。
 - SMTP客户机在25号端口建立一个到SMTP服务器的TCP连接。
 
 #### IMAP 因特网邮件访问协议
@@ -7,4 +7,14 @@
 - 收件人可以把邮件移动到一个新的、用户创建的文件夹中，或者阅读、删除邮件等。
 - IMAP协议为用户提供了创建文件夹以及在文件夹之间移动邮件的命令。
 
-
+#### DNS
+- DNS提供的服务
+    + 主机名解析为IP地址
+    + 主机别名
+    + 邮件服务器别名
+    + 负载分配
+- DNS工作机制：假设hostA 想知道www.sina.com 的IP 地址。
+    + hostA 先访问root DNS 服务器，获得若干个TLD DNS 服务器的IP 地址。
+    + hostA 再访问其中com DNS 服务器，获得若干个authoritative DNS 服务器的IP地址。
+    + hostA 再访问其中sina.com DNS 服务器，即可获得新浪的IP 地址。
+    + 通常会有一台本地的DNS 与hostA 相连，本地的DNS 缓存了很多映射，hostA 会先访问本地DNS，若查不到相应IP 才访问root DNS 服务器，可以加快查询速度。
