--- a/大三上/计算机网络/第三章-运输层.md
+++ b/大三上/计算机网络/第三章-运输层.md
@@ -63,3 +63,16 @@
 #### TCP流控制（TCP flow control）
 - TCP 为应用程序提供了流量控制服务，以消除发送方使接收方缓存溢出的可能性，即发送方的发送速率与接收方应用程序的读速率相匹配。
 - 维护一个接收窗口的变量来提供流量控制。
+
+#### TCP拥塞控制
+- AIMD 加性增乘性减
+	+ 线性增长阶段称为拥塞避免。
+	+ 丢包时：CongWin 减半，但不小于1 MSS
+	+ 无拥塞时：CongWin 线性增长，每RTT 增加1 MSS
+- Slow start 慢启动
+	+ 启动时，CongWin = 1 MSS，接下来以指数方式增长，每个RTT 都翻一倍
+- Reaction To Timeout Events 对超时事件作出反应
+	+ 慢启动开始，直到CongWin > Threshold 开始拥塞避免
+	+ 检测到3 个冗余ACK，CongWin 减半，Threshold 阈值= CongWin/2
+	+ 超时，CongWin = 1 MSS，Threshold = CongWin/2
+
