--- a/大三上/计算机网络/第四章-网络层.md
+++ b/大三上/计算机网络/第四章-网络层.md
@@ -1,3 +1,9 @@
+#### 网络服务模型
+- 虚电路网络（Virtual-Circuit Networks）
+    + 仅在网络层提供连接服务的计算机网络被称为虚电路网络。（并没有被如今的因特网使用）在此网络中，该网络的路由器必须为进行中的连接维持连接状态信息。
+- 数据报网络（Datagram Networks）
+    + 仅在网络层提供无连接服务的计算机网络被称为数据报网络。
+
 #### RIP
 - RIP协议是一种使用广泛的内部网关协议。
 - RIP的跳是沿着从源路由器到目的子网的最短路径所经过的子网数量。
@@ -12,7 +18,7 @@
 	+ 输入端口：执行将一条输入的物理链路端连接到路由器的物理层功能。完成查找和转发功能
 	+ 输出端口：存储经过交换结构转发给它的分组，并将这些分组传输到输出链路。
 	+ 交换结构：将路由器的输入端口连接到输出端口
-	+ 选路处理器：执行短路协议，维护选路信息与转发表，并执行路由器中的网络管理功能
+	+ 选路处理器：执行选路协议，维护选路信息与转发表，并执行路由器中的网络管理功能
 - 可能出现排队的情况
 	+ 输入端口队列：等待路由器处理计算路由
 	+ 输出端口队列：等待输出端口空闲的缓存
